--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vis.gl/react-google-maps": "^0.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5"
   },
   "scripts": {
